@@ -2,32 +2,32 @@ AUX zekr-0.6.6-resource-fixes.patch 1256 RMD160 149e2adaca1024a7674a470fca76755d
 AUX zekr-0.7.0_beta1-buildfix.patch 552 RMD160 6f4997d5a53c1dee1b561fe5801158daba0b37c9 SHA1 f342425699bc3a7a386cf62f5251799ffbc699c6 SHA256 a22b1e3c0089d00f9ddd375cfc24f0a1b3248bb754aa1cb0cd0ffdd76beb97d1
 AUX zekr.png 4221 RMD160 eefc8987c5b00bfd9ef13379bead031e459891a0 SHA1 b0261281aaf9cd4266d9ad8afbb84672241a7170 SHA256 73e59073b4101613371e8be7bf20dea13fd68a4abbc70afe22f9f39fdbea3f9d
 DIST zekr-0.7.0beta1-linux.tar.gz 4731054 RMD160 4c4924fe5c7cc16631c5c40f38eda4c8e444614a SHA1 48a15586e003c74e1c1853861cccfed77a9efead SHA256 3d6807609e2e62d2d9841158ac44d3dab70006698f393f40f4bb874de6388d73
-DIST zekr-quran-translation-ansarian-fa_0.7.1-1-ppa1_all.deb 420738 RMD160 0cbef0243d7b3995b970a2318ed45665b64dd8a4 SHA1 dc92ec2762d3d2fe3949d725b26e0ed01583ad1c SHA256 fa10f1ecd08b16f070bef9a6c3ddffcf8f1c0ebc99c02d16fb88d1d10cc28b65
-DIST zekr-quran-translation-bubenheimelyas-de_0.7.1-1-ppa1_all.deb 295786 RMD160 4e9b24e5a778bd4b71fc1500240a7aff3b00734d SHA1 04ac85cc40da41fc05f151a241520d8f45fe3ab4 SHA256 4f05bc8bd9460fd937745e4cd696fd07885151d0d844fcaeba3c161e13f62480
-DIST zekr-quran-translation-cortes-es_0.7.1-1-ppa1_all.deb 263626 RMD160 d99502390608e829f8db94f7c50967d3ed613399 SHA1 db42cc04b710953987975ddb23d7c035749ad19f SHA256 b0a8eb74af4ce755b6c662157b90437ad350b766304b1a8b1000de212bb25544
-DIST zekr-quran-translation-diyanet-tr_0.7.1-1-ppa1_all.deb 286568 RMD160 8ae23e172098a2916cd8b840ca4b770dae20c562 SHA1 68d5efccdc6b46b48ef4c5bf46371ebee4cf7372 SHA256 f0000086ada45b02bc21a7773b0130c8128c434ecd28cb89907b07865219436d
-DIST zekr-quran-translation-elhayek-pt_0.7.1-1-ppa1_all.deb 285858 RMD160 8862067249a89d12aa101e238a562026426908a9 SHA1 5fdd61e8784730d63c83eb68a383c8be41d6e57a SHA256 cc8c2437930dbc49df93e98a882fbc9d6a1df2b3263ee5b3ade8512f3dfae6e0
-DIST zekr-quran-translation-ghomshei-fa_0.7.1-1-ppa1_all.deb 425146 RMD160 deb87d308b604d6e0d24e686f1b2e1092b851262 SHA1 bd314236bcd6f3faaeca802cc0758372455d71b6 SHA256 f278984a3460720927101e2270c42b86bb271cc8c0e9980a259774e55ec9ee58
-DIST zekr-quran-translation-hamidullah-fr_0.7.1-1-ppa1_all.deb 308664 RMD160 c7d327470a7ddd9d9e348343b9bd6078a6cf77e3 SHA1 cf1b9cf65eb7be4bf4546dbcd5aa1cddfb830e79 SHA256 b6d7a7c51c55cf57bb4b504aa6bf37bb0d67fddcf810b313769cab9d30c5b8ca
-DIST zekr-quran-translation-indonesian-id_0.7.1-1-ppa1_all.deb 308342 RMD160 9343c400d7a531a9149575a755e911e4b1f08d18 SHA1 6ecf82f1499e12c2c14d7d25a9180979e64d6d73 SHA256 e9e95ef9b121e18b72bc135da12e8a8d3f534e5931cd74d914d5362bd9e505d9
-DIST zekr-quran-translation-irfanulquran-ur_0.7.1-1-ppa1_all.deb 460256 RMD160 10648deb97b5486a7cb6a8a0b4595e059dfd2275 SHA1 3a2d0d43204b02ac5735dd870c5d3f28c1910a7a SHA256 62f1e281e57615294d01b367812067a100f5b09b4046f668b723456b931a0d73
-DIST zekr-quran-translation-jalandhry-ur_0.7.1-1-ppa1_all.deb 354980 RMD160 eee8581d0e086826afa640308d5f093d93a283e4 SHA1 24f6e1a6f564329b9e26e565318b8f486e3a79b3 SHA256 121f53b0beb0d668677736502b4d74e33ba92f0d747d3de61f7a37450ba460ca
-DIST zekr-quran-translation-kanzuliman-ur_0.7.1-1-ppa1_all.deb 332270 RMD160 5ca517db1a121c554a73f675d963a0ccbd801db6 SHA1 9966567fed8f8b7458ad8997d3e1c9efc75bc0df SHA256 e4b491c75121eb998ba141405bc90ed79f835a1a9ab3910792001b723ef365af
-DIST zekr-quran-translation-keyzer-nl_0.7.1-1-ppa1_all.deb 318870 RMD160 86ceb8a4b1f47baee8da617c812dcb396ce4705e SHA1 0fc8d8e43d0ccdb95c25f36fbfd113f6fc65b808 SHA256 62b720129e3f6a4b24b8002f4cdd1f54de18ca42f47d68a8033301d43999722f
-DIST zekr-quran-translation-korkut-bs_0.7.1-1-ppa1_all.deb 277188 RMD160 6373a6df0af220f8d52800463e7f5772ecef8bab SHA1 9753c9524c2c00888af9f60fb50c95723514efe9 SHA256 a9bf2f589e5ec9887d066942afc1cdd17fa8e605f1e8d70b5239e8e27777ae91
-DIST zekr-quran-translation-kuliev-ru_0.7.1-1-ppa1_all.deb 340530 RMD160 693ded40d5aa3a6d937e1d6e2669a666f7034215 SHA1 a344b436e511254161858cef2b3ab495b84ad4de SHA256 b315cfaa3dc0ce66f400fdd06ce2b68d5f82a3fc76436f5d210c844f4cd1b72f
-DIST zekr-quran-translation-makarem-fa_0.7.1-1-ppa1_all.deb 387918 RMD160 e806b75eb0508c5a72e77038c08555f7b063a561 SHA1 1de863492c3902d2b85e29cf3c8d92ea591a9827 SHA256 a6a30a49bc22bc6ae0b0834d125a8910cc563f827115c91bacccb4436523ee62
-DIST zekr-quran-translation-muhammadibnrassoul-de_0.7.1-1-ppa1_all.deb 316044 RMD160 7ebe4215032c4fbc67ac7ada626a2e4d0d052519 SHA1 914a6066aa3ee4923928b0a83879317a847a21ea SHA256 5130cab6acee08527a21617a277f43f2e051d48c877a17564ecef0452b731d2f
-DIST zekr-quran-translation-noghmani-tt_0.7.1-1-ppa1_all.deb 488208 RMD160 9cb867682055b2c2835d5395418ffee826fc6c78 SHA1 6cf5328d3c54940993bb5eba550f0fd6802a3524 SHA256 f927cf84c4487c378f7e9ef8ef72b542e43bfb8325531ced1cc683c5ff800660
-DIST zekr-quran-translation-osmanov-ru_0.7.1-1-ppa1_all.deb 383270 RMD160 4b224e0579a232f0fd6ca283207ffab7ee4fe34a SHA1 451240bcbbcc2a77ec788dfa59d497a42e48c3bf SHA256 ce4276e1124bcef287d9ffe520121004588daed5b5a8ec0feda91b92d590107c
-DIST zekr-quran-translation-ozturk-tr_0.7.1-1-ppa1_all.deb 310818 RMD160 efc5f4552492a786a19d566ba660192cbfd42820 SHA1 3c0d58e8b313049b5de63e7595bfc7c3828a0254 SHA256 6b6318a6910d52e20c3183ebde72dcb42af7ca307ea0fa1d7b7bb9c0db4afbb1
-DIST zekr-quran-translation-piccardo-it_0.7.1-1-ppa1_all.deb 272868 RMD160 8b489dc35aa977b2c7bb78a7149bc7e9c0d770cf SHA1 e6f8c64566eba6adb155ae7f866f34dcf6eba49c SHA256 ccbf6dec9c6a757979cd5e3449cd1dd1db5944cb662c5c666400a5e3b28b1543
-DIST zekr-quran-translation-pickthall-en_0.7.1-1-ppa1_all.deb 278144 RMD160 9ad014aaf4004f7b5e1896f751f07048ba3e5812 SHA1 fc4e79be29d87a95251f206a0610f21e2bc9a8a7 SHA256 f7b3a4225e5a71980339c618a53e550b677b26b58cbea77457199baa7850e54d
-DIST zekr-quran-translation-porokhova-ru_0.7.1-1-ppa1_all.deb 430912 RMD160 6c3270abab7acc9540d6f86038dc447d75a826ae SHA1 85c0ab1a904ad5d064bb8deb7a938d9e3b580df1 SHA256 692e527ba33d62a271e686a9c4659d827df19b3ef579731c38efc91bfdadfbea
-DIST zekr-quran-translation-qaribullah-en_0.7.1-1-ppa1_all.deb 276256 RMD160 5405d55057cce7557c1cb888afca9736eda0ce78 SHA1 31d5e56d7ca3fd9bad4b1ae42ef4013fd5c1c8a2 SHA256 47320eea12ecde6f91df24caf7043b3987ef7d8a2f9f59d04ab2d9abe8e4e999
-DIST zekr-quran-translation-shakir-en_0.7.1-1-ppa1_all.deb 270184 RMD160 067e1ebb997d21fae18ddb9e98e6422f383dbbea SHA1 545b67de98da18855478b3242d5e781cef4aa385 SHA256 8edbe42dcd9ec121a545b5b75371ec87b2ab70578c587c8bf91cfbd98df2341a
-DIST zekr-quran-translation-yusufali-en_0.7.1-1-ppa1_all.deb 321330 RMD160 08bb9ee21857a1af4c5fe30222bd5620def2fe02 SHA1 a84e3abc15992cba1ecb7e75e4afc2ccc7e57b79 SHA256 9dfddd28bf2098ea3d358bc409d1795755134be16fe161c521a2ef420d0f9e2c
-DIST zekr-quran-translation-zaidan-de_0.7.1-1-ppa1_all.deb 306702 RMD160 16db0774378fae974b319555c520c578b0037b9b SHA1 da63b0cc22cc37c3779c8635a7f42cfbbf8a01d9 SHA256 ee0f3d74ae6205fbbcb36303270840534c0444c924133f182dba44dd72b180d1
-EBUILD zekr-0.7.0_beta1-r2.ebuild 3887 RMD160 3b23800196c6d1d3b483940e9ebbe9c7f7876f63 SHA1 8e99e00de682a6cdb0884aceaa022c5a0e14b317 SHA256 2c6a4bcc04dba0c1161aece7eca11b99b034a991fbe639eae3de896a6a57ffa0
-MISC ChangeLog 1314 RMD160 6fbe322ced0b8da55a7d5e73207df7af529c3307 SHA1 8eb4a4ae799215cd128a2a81fd04d9585820e403 SHA256 768cab09089af806f8ba3b4c408e329e383cf9928a5e86917ba11e6d7c384485
+DIST zekr-quran-translation-bs-korkut_0.7.1-1-ppa4_all.deb 277402 RMD160 bc87f0e59fd1a7aed692788a8e04430461dc8ecb SHA1 f534303259ed7db76ba296d01c760255d90f2a20 SHA256 111d1789a2a21eea10c7300c10c0538d1298f43ba07ec74e411954866eafc501
+DIST zekr-quran-translation-de-bubenheimelyas_0.7.1-1-ppa4_all.deb 304232 RMD160 8d768554eaa6ee8dcddba385c0847f36df72bc45 SHA1 defbe52e11b0a261c7a2ef1052f917168c3e22e2 SHA256 4de1fd650f2b188c4cd0facbc7f7ed46f6e73fccc38546dca394225605d83a4d
+DIST zekr-quran-translation-de-muhammadibnrassoul_0.7.1-1-ppa4_all.deb 316246 RMD160 b077e9d00badfa786edc5630e5b5d1ef655cd212 SHA1 cb2fd51a751217222940cbcd88e3602219ee4f16 SHA256 70d85e2eec26108a0fadcc809c2cedef314ab7c04155070d82bce491a8dce2d4
+DIST zekr-quran-translation-de-zaidan_0.7.1-1-ppa4_all.deb 306868 RMD160 6a3635f772ce1f1c59af311c12654365a4a9634e SHA1 727366da1458837e72bc97e5300d82f8c77e180b SHA256 2def5ed89e9926bbfbdcf642d49b9717f785aa2bebcc55f823d5f12b8581c706
+DIST zekr-quran-translation-en-pickthall_0.7.1-1-ppa4_all.deb 278362 RMD160 d829ddd1a3137c60d62bd70e81dc379b2357c209 SHA1 a78be99232e5ebbfae5d0dcf1500e5833fb2f161 SHA256 cb24f181630f541771ff51ee07b296ec2fb36a94421b12100ac413f7340091c7
+DIST zekr-quran-translation-en-qaribullah_0.7.1-1-ppa4_all.deb 276466 RMD160 c61fccb5b98d4bff9b656904f4270a8aacd77845 SHA1 6cd3889b889fc66628bbef62e1f59c79f3ccdccf SHA256 4c2588c6af738ee31ceb326e5c207e549e88953aa655dbc82c4d8f922c3072b7
+DIST zekr-quran-translation-en-shakir_0.7.1-1-ppa4_all.deb 270394 RMD160 867b4444a8cb1d862586660698c425230c9a0a95 SHA1 47313930097b8c10b7c0c776ad4a8e952e2aa5d1 SHA256 201fa6eafd077425e452c0543d04b01f1b03342c18207002a28f02d474d6ca5f
+DIST zekr-quran-translation-en-yusufali_0.7.1-1-ppa4_all.deb 321548 RMD160 30f2313f8c0513a74a0d00500143ad6857e18943 SHA1 7604b0891a70decfc90302426313867a3bea629b SHA256 c0975534c002904898018a76f64457c8703685e6a268baf013141559d8baecdd
+DIST zekr-quran-translation-es-cortes_0.7.1-1-ppa4_all.deb 263830 RMD160 f72f4e64affe696deb5f4d0e2e21968ee6c68943 SHA1 b426f370fcb4bd81ee3bd22ad143ae87455bfead SHA256 a148c9ae1bbef2d44cb5faeb221681e7868d75e22493f91db000220e9dbc249f
+DIST zekr-quran-translation-fa-ansarian_0.7.1-1-ppa4_all.deb 420958 RMD160 651141e7779065f38e8fe0030bdcb924ccc3e9c8 SHA1 0a7db1ff3e1a58e7ae824962266eaf36ab67f38b SHA256 14591a07d4fb645f6081198b6f2a225b0da4c7b8283ff0dbce34b0a8ed3bde52
+DIST zekr-quran-translation-fa-ghomshei_0.7.1-1-ppa4_all.deb 425366 RMD160 9310c33b9cd9b0cb8c6c143bd71f1fa352b3cfb5 SHA1 bf5036fb86d8812958419fff78b5e31c53ac0088 SHA256 0ae9c48f490cd88c4a85cb624b5d3046e81683493390884fdff68e6c41766d8f
+DIST zekr-quran-translation-fa-makarem_0.7.1-1-ppa4_all.deb 388146 RMD160 473e5f755c8af07c96f5f39d80f946409a490ff8 SHA1 269f8b0522c9d50051c2a3e4d71f78e82527ac1e SHA256 7a10a34751c8611a309e441cbbcec1fe4077b29ed380061933be52cba047deaa
+DIST zekr-quran-translation-fr-hamidullah_0.7.1-1-ppa4_all.deb 308884 RMD160 07734cf575fa75264975a4f2049b41048a4a2cc3 SHA1 b194cc30c3b0ce55984836578f7ed20e963da8b0 SHA256 af155a37fc4e442ae17e44deba00e7f7d2bd76e15671383e91080f604c8c0766
+DIST zekr-quran-translation-id-indonesian_0.7.1-1-ppa4_all.deb 308574 RMD160 81b858aba3db0b073a38b513ec6f89df7e4db8b2 SHA1 b1fd4a801f61620556affc04c4e2b4b62e16507c SHA256 b87dad9321cd2d20b76a0476ddc1fdd4c3d3a53fdb108c46e61568dc2b6d510d
+DIST zekr-quran-translation-it-piccardo_0.7.1-1-ppa4_all.deb 273098 RMD160 65272a3b7ff160c5d27c90ed4e3423964747732d SHA1 9a6b5e85833a0adef6a72fe1d4e4b8aac3e4c8cb SHA256 4bc7d438cc47ca94cdd3a0f1f0cc4a70cb068e7974e1bf93c6ec866853282fef
+DIST zekr-quran-translation-nl-keyzer_0.7.1-1-ppa4_all.deb 319082 RMD160 095f02cab102a0c212848d5b86d1aaf5ae30b9bf SHA1 f6543a57bb4659ca9d8ef2c2155201de85967a51 SHA256 008df2422e8313608ab952990126688dccb38969e5cd756d9aac3e1544e73d94
+DIST zekr-quran-translation-pt-elhayek_0.7.1-1-ppa4_all.deb 286068 RMD160 3cdb29c51cb90429f240c9111aab86338b714d7d SHA1 2208852f2ab349339625e7dc5b71a5f3235c9387 SHA256 7defe420b17dedda5578e92e9bd030ae1c3713be43c40b382100993964ca1c50
+DIST zekr-quran-translation-ru-kuliev_0.7.1-1-ppa4_all.deb 340754 RMD160 b5f76c8764b3d83ba13b6c9cc43ce33066a5a336 SHA1 27a323c64f1c934c1c8681bf81cd6ce5429d202e SHA256 b214ebd7154f0674b807c0beadfb0bbe1d6b1a3d1387217cd1c1eb80b078c737
+DIST zekr-quran-translation-ru-osmanov_0.7.1-1-ppa4_all.deb 383480 RMD160 6259c70f747a9170067cdb1e9476864df99bed1e SHA1 2b6b3dab9a13de9165981113b3e85016e250fe8d SHA256 a7d389fb810369828d800c6a390468a1d3f344913c2e48ff9ac85aa03caaa961
+DIST zekr-quran-translation-ru-porokhova_0.7.1-1-ppa4_all.deb 431114 RMD160 d77bb59ed6607d8c86dd5506f2bfb703e5cfc8cb SHA1 1bfba01880d77a9dc36bbf57ed67da2aa3a1ee60 SHA256 86d9cc8e81e94f4736f7b7f52579199b8fea13619cd5e904de7df9ced23faf00
+DIST zekr-quran-translation-tr-diyanet_0.7.1-1-ppa4_all.deb 286778 RMD160 f50a5c4bd9a375d3d2a3c6af03a53123f718485c SHA1 830beda7620d77e9a6c554793db6fdb723354545 SHA256 49f7ed400544c0cb72a0f19b2a332d6e48da17d2f5976e6e14b91500371e7878
+DIST zekr-quran-translation-tr-ozturk_0.7.1-1-ppa4_all.deb 311028 RMD160 a5dfb8ec97eb810b53c2017360b83fc0383a274c SHA1 ba3daa2ae50fa4c02a77512dc278d84dfb763fc5 SHA256 4370bfc0b13897558bca32fb098a20e5be1b8cf14f411a037e125661aab3d088
+DIST zekr-quran-translation-tt-noghmani_0.7.1-1-ppa4_all.deb 488420 RMD160 e412dafdbc92a4d154d48acd520121b6d926603b SHA1 6dff211db892790a05965523d05e0f3e4d2145c8 SHA256 2fa62f5e014e5f09c84b0cf7d03361684916c8b00ef3b680cdbbd037072d235b
+DIST zekr-quran-translation-ur-irfanulquran_0.7.1-1-ppa4_all.deb 460464 RMD160 0c1607eff0418005e59cb1a3306a85ed3d1bcd98 SHA1 9694861d94e792d4b5a49314f2a70dbdd270a617 SHA256 61a5d4c61d1d8db739d3274be3c4e676aa67497f76f34f2eaf333d9eb350adc1
+DIST zekr-quran-translation-ur-jalandhry_0.7.1-1-ppa4_all.deb 355214 RMD160 81ffcc67e6c734b9f26d641213239736713b9f38 SHA1 9c7f91160c0e095c4221204d7a170f12427669a4 SHA256 07d5e876c0a331f6fa40d424ba0c4195d86d11e0567e9bc0ae9f00125c1be59b
+DIST zekr-quran-translation-ur-kanzuliman_0.7.1-1-ppa4_all.deb 332490 RMD160 2d475e15c787427402291514f9ac4679130af9a8 SHA1 b0c6137334344596534b97db9d978881f047ee96 SHA256 3e2f015ea661234b12fbb6c5345220285c47e063ef081f23676ad163a74b0bfe
+EBUILD zekr-0.7.0_beta1-r3.ebuild 4085 RMD160 a56d2dbb56f93f8a8ed733d848b2610843a1a4ff SHA1 3fd60c0daf7bef5732c13d4b77d856c2a1d2cad9 SHA256 4e907ce9b0c0a9c6d743e55de31f37f9cb84e73e3b59ad12ea2334739c77bde7
+MISC ChangeLog 1460 RMD160 3bcbfa45dcd976b1aac8170642a2287961b6e287 SHA1 1edd7cd265b684eae64153b1bdc211b1cfb3c04f SHA256 894d5ab2fd0863a7d1ce33d76dea889612be4d7862a578b6f3aff9e36b2c68d4
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
