@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Apr 2008; Serkan Kaba <serkan_kaba@yahoo.com> -zekr-0.7.0_beta1-r2.ebuild,
+  +zekr-0.7.0_beta1-r3.ebuild:
+  Revbump to update translations.
+
   19 Apr 2008; Serkan Kaba <serkan_kaba@yahoo.com> -zekr-0.7.0_beta1-r1.ebuild,
   +zekr-0.7.0_beta1-r2.ebuild:
   Revbump to add translations.
